# active-data

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  custom.bat.tmpl  dox.bat  env.bat  msvc.bat
src/ActiveData/: ActData.h  ActData_Common.cpp  ActData_Common.h  ActData_Plugin.cpp  ActData_Plugin.h  CMakeLists.txt
src/ActiveData/BinDrivers/: ActData_BinDrivers.cpp  ActData_BinDrivers.h  ActData_BinRetrievalDriver.cpp  ActData_BinRetrievalDriver.h  ActData_BinStorageDriver.cpp  ActData_BinStorageDriver.h  ActData_MeshDriver.cpp  ActData_MeshDriver.h
src/ActiveData/Kernel/: ActData_Application.cpp  ActData_Application.h  ActData_AsciiStringParameter.cpp  ActData_AsciiStringParameter.h  ActData_BaseModel.cpp  ActData_BaseModel.h  ActData_BaseNode.cpp  ActData_BaseNode.h  ActData_BasePartition.cpp  ActData_BasePartition.h  ActData_BaseTreeFunction.cpp  ActData_BaseTreeFunction.h  ActData_BoolArrayParameter.cpp  ActData_BoolArrayParameter.h  ActData_BoolParameter.cpp  ActData_BoolParameter.h  ActData_ComplexArrayParameter.cpp  ActData_ComplexArrayParameter.h  ActData_CopyPasteEngine.cpp  ActData_CopyPasteEngine.h  ActData_DependencyAnalyzer.cpp  ActData_DependencyAnalyzer.h  ActData_DependencyGraph.cpp  ActData_DependencyGraph.h  ActData_DependencyGraphIterator.cpp  ActData_DependencyGraphIterator.h  ActData_ExtTransactionEngine.cpp  ActData_ExtTransactionEngine.h  ActData_FuncExecutionCtx.cpp  ActData_FuncExecutionCtx.h  ActData_FuncExecutionTask.cpp  ActData_FuncExecutionTask.h  ActData_GraphFrozenException.h  ActData_GroupParameter.cpp  ActData_GroupParameter.h  ActData_IntArrayParameter.cpp  ActData_IntArrayParameter.h  ActData_IntParameter.cpp  ActData_IntParameter.h  ActData_LogBook.cpp  (+49 more)
src/ActiveData/Mesh/: ActData_MeshAttr.cpp  ActData_MeshAttr.h  ActData_MeshDeltaEntities.cpp  ActData_MeshDeltaEntities.h  ActData_MeshMDelta.cpp  ActData_MeshMDelta.h
src/ActiveData/Patterns/: ActData_RealArrayOwnerAPI.cpp  ActData_RealArrayOwnerAPI.h  ActData_RecordCollectionOwnerAPI.cpp  ActData_RecordCollectionOwnerAPI.h
src/ActiveData/STD/: ActData_BaseVarNode.cpp  ActData_BaseVarNode.h  ActData_BoolVarNode.cpp  ActData_BoolVarNode.h  ActData_BoolVarPartition.cpp  ActData_BoolVarPartition.h  ActData_IntVarNode.cpp  ActData_IntVarNode.h  ActData_IntVarPartition.cpp  ActData_IntVarPartition.h  ActData_RealEvaluatorFunc.cpp  ActData_RealEvaluatorFunc.h  ActData_RealVarNode.cpp  ActData_RealVarNode.h  ActData_RealVarPartition.cpp
src/ActiveData/Tools/: ActData_CAFConversionAsset.cpp  ActData_CAFConversionAsset.h  ActData_CAFConversionCtx.cpp  ActData_CAFConversionCtx.h  ActData_CAFConversionModel.cpp  ActData_CAFConversionModel.h  ActData_CAFConversionNode.cpp  ActData_CAFConversionNode.h  ActData_CAFConversionParameter.cpp  ActData_CAFConversionParameter.h  ActData_CAFConverter.cpp  ActData_CAFConverter.h  ActData_CAFConverterBase.h  ActData_CAFConverterFw.cpp  ActData_CAFConverterFw.h  ActData_CAFDumper.cpp  ActData_CAFDumper.h  ActData_CAFLoader.cpp  ActData_CAFLoader.h  ActData_GraphToDot.cpp  ActData_GraphToDot.h  ActData_UniqueNodeName.cpp  ActData_UniqueNodeName.h
src/ActiveData/resources/: Plugin  Resources
src/ActiveDataAPI/: ActAPI.h  ActAPI_Common.h  ActAPI_IAlgorithm.cpp  ActAPI_IAlgorithm.h  ActAPI_IDataCursor.cpp  ActAPI_IDataCursor.h  ActAPI_ILogger.cpp  ActAPI_ILogger.h  ActAPI_IModel.cpp  ActAPI_IModel.h  ActAPI_INode.cpp  ActAPI_INode.h  ActAPI_IParameter.cpp  ActAPI_IParameter.h  ActAPI_IPartition.cpp  ActAPI_IPartition.h  ActAPI_IPlotter.cpp  ActAPI_IPlotter.h  ActAPI_IProgressNotifier.cpp  ActAPI_IProgressNotifier.h  ActAPI_ITreeFunction.cpp  ActAPI_ITreeFunction.h  ActAPI_TxData.h  ActAPI_TxRes.h  ActAPI_Variables.cpp  ActAPI_Variables.h  ActAPI_Version.h  CMakeLists.txt
src/ActiveDataAux/: ActAux.h  ActAux_ArrayUtils.cpp  ActAux_ArrayUtils.h  ActAux_Common.h  ActAux_Env.h  ActAux_ExprCalculator.cpp  ActAux_ExprCalculator.h  ActAux_FileDumper.cpp  ActAux_FileDumper.h  ActAux_ShapeFactory.cpp  ActAux_ShapeFactory.h  ActAux_SpyLog.cpp  ActAux_SpyLog.h  ActAux_TimeStamp.cpp  ActAux_TimeStamp.h  ActAux_Timing.h  ActAux_Utils.cpp  ActAux_Utils.h  CMakeLists.txt
src/ActiveDataTest/: ActTest.h  ActTest_CaseIDs.h  ActTest_DataFramework.cpp  ActTest_DataFramework.h  ActTest_Main.cpp  CMakeLists.txt
src/ActiveDataTest/DataModel/: ActTest_AsciiStringParameter.cpp  ActTest_AsciiStringParameter.h  ActTest_BaseModel.cpp  ActTest_BaseModel.h  ActTest_BoolArrayParameter.cpp  ActTest_BoolArrayParameter.h  ActTest_BoolParameter.cpp  ActTest_BoolParameter.h  ActTest_CAFConversionCtx.cpp  ActTest_CAFConversionCtx.h  ActTest_ComplexArrayParameter.cpp  ActTest_ComplexArrayParameter.h  ActTest_CopyPasteEngine.cpp  ActTest_CopyPasteEngine.h  ActTest_ExtTransactionEngine.cpp  ActTest_ExtTransactionEngine.h  ActTest_GroupParameter.cpp  ActTest_GroupParameter.h  ActTest_IntArrayParameter.cpp  ActTest_IntArrayParameter.h  ActTest_IntParameter.cpp  ActTest_IntParameter.h  ActTest_MeshAttr.cpp  ActTest_MeshAttr.h  ActTest_MeshParameter.cpp  ActTest_MeshParameter.h  ActTest_NameParameter.cpp  ActTest_NameParameter.h  ActTest_RealArrayParameter.cpp  ActTest_RealArrayParameter.h  ActTest_RealParameter.cpp  ActTest_RealParameter.h  ActTest_ReferenceListParameter.cpp  ActTest_ReferenceListParameter.h  ActTest_ReferenceParameter.cpp  ActTest_ReferenceParameter.h  ActTest_SelectionParameter.cpp  ActTest_SelectionParameter.h  ActTest_ShapeParameter.cpp  ActTest_ShapeParameter.h  (+12 more)
src/ActiveDataTestLib/: ActTestLib.h  ActTestLib_Common.cpp  ActTestLib_Common.h  ActTestLib_FileComparator.cpp  ActTestLib_FileComparator.h  ActTestLib_Launcher.cpp  ActTestLib_Launcher.h  ActTestLib_Macro.h  ActTestLib_TestCase.cpp  ActTestLib_TestCase.h  CMakeLists.txt
src/ActiveDataTestLib/Reports/: ActTestLib_DescriptionProc.cpp  ActTestLib_DescriptionProc.h  ActTestLib_ReportRenderer.cpp  ActTestLib_ReportRenderer.h  ActTestLib_ReportStyle.cpp  ActTestLib_ReportStyle.h  ActTestLib_ReportStyleFactory.cpp  ActTestLib_ReportStyleFactory.h  ActTestLib_ReportTag.cpp  ActTestLib_ReportTag.h  (+2 more)
(+238 files in other folders)
